fix home page text alignment in lifestyle sec

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
 
 @layer utilities {
   body {
-    @apply bg-background-dark min-w-[399px] max-w-[1920px] mx-auto overflow-x-hidden;
+    @apply bg-background-dark min-w-[399px] max-w-[1920px] mx-auto !overflow-x-hidden;
   }
   .smooth-transition {
     @apply !transition-all !duration-500;
